@@ -965,6 +965,11 @@ Screens
   the specified type (e.g. ``df.viewscreen_titlest``), or ``nil`` if none match.
   If ``depth`` is not specified or is less than 1, all viewscreens are checked.
 
+* ``dfhack.gui.getDFViewscreen([skip_dismissed])``
+
+  Returns the topmost viewscreen not owned by DFHack. If ``skip_dismissed`` is
+  ``true``, ignores screens already marked to be removed.
+
 General-purpose selections
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
