@@ -48,12 +48,14 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## API
 - ``Gui::getDwarfmodeDims``: now only returns map viewport dimensions; menu dimensions are obsolete
+- ``Gui::getDFViewscreen``: returns the topmost underlying DF viewscreen
 
 ## Lua
 - ``gui.View``: ``visible`` and ``active`` can now be functions that return a boolean
 - ``widgets.Panel``: new attributes to control window dragging and resizing with mouse or keyboard
 - ``widgets.Window``: Panel subclass with attributes preset for top-level windows
 - `overlay`: ``OverlayWidget`` now inherits from ``Panel`` instead of ``Widget`` to get all the frame and mouse integration goodies
+- ``dfhack.gui.getDFViewscreen()``: returns the topmost underlying DF viewscreen
 
 ## Internals
 
